--- a/style.css
+++ b/style.css
@@ -94,3 +94,10 @@ body{
     flex-direction: column;
     gap: 32px;
 }
+.product{
+    max-width: 1280px;
+    font-weight: 600;
+    font-size: 36px;
+    line-height: 40px;
+    letter-spacing: 0%;
+}
